--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -31,30 +31,25 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">SupplierTestone</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">147.3 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">SupplierTestone</td><td class="numi">0</td><td class="numi">0</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">80.1 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
 <tr><th colspan="4">SupplierTestone &#8212; failed</th></tr>
-<tr class="failedodd"><td rowspan="1">Booking.Credit_Book</td><td><a href="#m1"><b>CreditBook</b>  </a></td><td class="numi">1</td><td>1517409071701</td><td class="numi">147233</td></tr>
+<tr class="failedodd"><td rowspan="1">Booking.Credit_Card_Book</td><td><a href="#m1"><b>CreditCardBook</b>  </a></td><td class="numi">1</td><td>1517550432296</td><td class="numi">80040</td></tr>
 </table>
 <h1>SupplierTestone</h1>
-<h2 id="m1">Booking.Credit_Book:CreditBook</h2>
+<h2 id="m1">Booking.Credit_Card_Book:CreditCardBook</h2>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr class="param"><th>Parameter #1</th></tr>
 <tr class="param stripe"><td>CH</td>
 </tr>
 <tr><td style="padding-left:3em" colspan="1">
-<p>Timed out after 80 seconds waiting for visibility of element located by By.xpath: //*[@id=&apos;viewButton&apos;]
-Build info: version: &apos;2.53.0&apos;, revision: &apos;35ae25b1534ae328c771e0856c93e187490ca824&apos;, time: &apos;2016-03-15 10:43:46&apos;
-System info: host: &apos;PC350015&apos;, ip: &apos;10.245.98.86&apos;, os.name: &apos;Windows 10&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;1.8.0_131&apos;
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Capabilities [{applicationCacheEnabled=false, rotatable=false, mobileEmulationEnabled=false, networkConnectionEnabled=false, chrome={chromedriverVersion=2.35.528161 (5b82f2d2aae0ca24b877009200ced9065a772e73), userDataDir=C:\Users\479739\AppData\Local\Temp\scoped_dir12032_32541}, takesHeapSnapshot=true, pageLoadStrategy=normal, databaseEnabled=false, handlesAlerts=true, hasTouchScreen=false, version=62.0.3202.62, platform=XP, browserConnectionEnabled=false, nativeEvents=true, acceptSslCerts=false, acceptInsecureCerts=false, locationContextEnabled=true, webStorageEnabled=true, browserName=chrome, takesScreenshot=true, javascriptEnabled=true, cssSelectorsEnabled=true, setWindowRect=true, unexpectedAlertBehaviour=}]
-Session ID: 69d53b08c75c12ba3b5a1fbaa563f80c expected [true] but found [false]</p>
+<p>expected [true] but found [false] expected [true] but found [false]</p>
 org.testng.Assert.fail(Assert.java:94)
 <br/>at org.testng.Assert.failNotEquals(Assert.java:494)
 <br/>at org.testng.Assert.assertTrue(Assert.java:42)
-<br/>at Booking.Credit_Book.CreditBook(Credit_Book.java:307)
+<br/>at Booking.Credit_Card_Book.CreditCardBook(Credit_Card_Book.java:300)
 <br/>25 lines not shown
 </td></tr>
 </table>
