--- a/test-output/old/SupplierSuite/classes.html
+++ b/test-output/old/SupplierSuite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>Cancel.Cancel_Credit_NFR</td>
+<td>Cancel.Cancel_Credit_Within_DeadLine</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>CreditCancelNFR</td>
+<td>CreditCancelWithinDeadline</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
