--- a/test-output/old/SupplierSuite/methods.html
+++ b/test-output/old/SupplierSuite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>SupplierSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c78c6b">  <td>18/02/12 19:38:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Cancel_Credit_Within_DeadLine.CreditCancelWithinDeadline(java.lang.String)[pri:0, instance:Cancel.Cancel_Credit_Within_DeadLine@3d921e20]">CreditCancelWithinDeadline</td> 
+<tr bgcolor="c78c6b">  <td>18/02/13 19:07:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Search_Dotw.SearchDotw(java.lang.String)[pri:0, instance:Search.Search_Dotw@3d921e20]">SearchDotw</td> 
   <td>main@1970881185</td>   <td></td> </tr>
-<tr bgcolor="c78c6b">  <td>18/02/12 19:39:32</td>   <td>63690</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Cancel_Credit_Within_DeadLine.getResult(org.testng.ITestResult)[pri:0, instance:Cancel.Cancel_Credit_Within_DeadLine@3d921e20]">&lt;&lt;getResult</td> 
+<tr bgcolor="c78c6b">  <td>18/02/13 19:08:40</td>   <td>57963</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Search_Dotw.getResult(org.testng.ITestResult)[pri:0, instance:Search.Search_Dotw@3d921e20]">&lt;&lt;getResult</td> 
 <td>&nbsp;</td>  <td>main@1970881185</td>   <td></td> </tr>
-<tr bgcolor="c78c6b">  <td>18/02/12 19:39:32</td>   <td>63693</td> <td>&nbsp;</td><td title="&lt;&lt;Cancel_Credit_Within_DeadLine.afterTest()[pri:0, instance:Cancel.Cancel_Credit_Within_DeadLine@3d921e20]">&lt;&lt;afterTest</td> 
+<tr bgcolor="c78c6b">  <td>18/02/13 19:08:40</td>   <td>57967</td> <td>&nbsp;</td><td title="&lt;&lt;Search_Dotw.afterTest()[pri:0, instance:Search.Search_Dotw@3d921e20]">&lt;&lt;afterTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1970881185</td>   <td></td> </tr>
 </table>
